# pitch-core

./: .gitignore  ANALYSIS.md  Cargo.toml  MODELS.md  NOTICE  README.md
crates/pitch-core/: Cargo.toml  LICENSE-MIT  README.md
crates/pitch-core-onnx/: Cargo.toml  NOTICE  README.md
crates/pitch-core-onnx/examples/: bench.rs
crates/pitch-core-onnx/src/: crepe.rs  fcpe.rs  lib.rs  pesto.rs  rmvpe.rs  swiftf0.rs
crates/pitch-core-py/: Cargo.toml  NOTICE  README.md
crates/pitch-core-py/python/: quickstart.py
crates/pitch-core-py/src/: lib.rs
crates/pitch-core/examples/: quickstart.rs
crates/pitch-core/src/: estimator.rs  lib.rs  praat_ac.rs  pyin_est.rs  resample.rs  swipe.rs
tools/: HF_FCPE_MODEL_CARD.md  download-models.sh  fcpe_export.py  pesto_export.py
